[tool.poetry]
name = "multi-doc-chatbot"
version = "0.1.0"
description = "A document-based chatbot using LangChain and Gemini"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "multi-doc-chatbot.py" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.8.0"
asgiref = "3.8.1"
async-timeout = "4.0.3"
attrs = "23.2.0"
backoff = "2.2.1"
bcrypt = "4.1.3"
build = "1.2.1"
cachetools = "5.3.3"
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
chroma-hnswlib = "0.7.3"
chromadb = "0.5.0"
click = "8.1.7"
coloredlogs = "15.0.1"
dataclasses-json = "0.6.7"
Deprecated = "1.2.14"
distro = "1.9.0"
docx2txt = "0.8"
exceptiongroup = "1.2.2"
fastapi = "0.115.0"
filelock = "3.15.4"
flatbuffers = "24.3.25"
frozenlist = "1.4.1"
fsspec = "2024.5.0"
google-auth = "2.32.0"
googleapis-common-protos = "1.63.2"
google-genai="1.26.0"
greenlet = "3.0.3"
grpcio = "1.65.2"
h11 = "0.14.0"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.28.1"
huggingface-hub = "0.23.4"
humanfriendly = "10.0"
idna = "3.7"
importlib-metadata = "8.0.0"
importlib-resources = "6.4.0"
jsonpatch = "1.33"
jsonpointer = "2.4"
kubernetes = "31.0.0"
langchain = "0.3.19"
langchain-community = "0.3.18"
langchain-core = "0.3.69"
langchain-google-genai = "2.0.9"
langsmith = "0.3.45"
sentence-transformers = "2.2.2"
faiss-cpu = "1.7.4"
marshmallow = "3.21.3"
mmh3 = "4.1.0"
monotonic = "1.6"
mpmath = "1.3.0"
multidict = "6.0.5"
mypy-extensions = "1.0.0"
numpy = "1.26.4"
oauthlib = "3.2.2"
onnxruntime = "1.19.0"
openai = "1.40.0"
opentelemetry-api = "1.26.0"
opentelemetry-exporter-otlp-proto-common = "1.26.0"
opentelemetry-exporter-otlp-proto-grpc = "1.26.0"
opentelemetry-instrumentation = "0.47b0"
opentelemetry-instrumentation-asgi = "0.47b0"
opentelemetry-instrumentation-fastapi = "0.47b0"
opentelemetry-proto = "1.26.0"
opentelemetry-sdk = "1.26.0"
opentelemetry-semantic-conventions = "0.47b0"
opentelemetry-util-http = "0.47b0"
overrides = "7.7.0"
packaging = "24.1"
posthog = "3.5.0"
protobuf = "4.25.3"
pulsar-client = "3.5.0"
pyasn1 = "0.6.0"
pyasn1-modules = "0.4.0"
pydantic = "2.9"
pydantic_core = "2.23.2"
pypdf = "4.2.0"
PyPika = "0.48.9"
pyproject_hooks = "1.1.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
PyYAML = "6.0.1"
regex = "2024.7.24"
requests = "2.32.3"
requests-oauthlib = "2.0.0"
rsa = "4.9"
six = "1.16.0"
sniffio = "1.3.1"
SQLAlchemy = "2.0.31"
streamlit="1.47.0"
starlette = "0.38.2"
sympy = "1.13.1"
tenacity = "8.5.0"
tiktoken = "0.7.0"
tokenizers = "0.19.1"
tomli = "2.0.1"
tqdm = "4.66.5"
typer = "0.12.3"
typing-inspect = "0.9.0"
typing_extensions = "4.12.2"
urllib3 = "2.2.2"
uvicorn = "0.30.1"
uvloop = "0.19.0"
watchfiles = "0.22.0"
websocket-client = "1.8.0"
websockets = "13.0.0"
wrapt = "1.16.0"
yarl = "1.9.4"
zipp = "3.19.2"
langchain_ollama = "0.3.5"
InstructorEmbedding = ">=1.0.1"
transformers = ">=4.35.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"